sumo/tests/sumo/extended/rerouter/errors/xml/destprob_no_begin/errors.sumo
Error: Expected comment or processing instruction
 In file 'input_definition.def.xml'
 At line/column 7/1.

Quitting (on error).
